src/graphql_schema/snapshots/tyorka_admin__graphql_schema__queries__products__by_id.snap
---
source: src/graphql_schema/queries.rs
expression: result.data.into_json().unwrap()
---
{
  "product": {
    "id": "07d7b72c-5b2e-4a35-a257-158496993dcc"
  }
}
