src/graphql_schema/snapshots/tyorka_admin__graphql_schema__queries__products__cover.snap
---
source: src/graphql_schema/queries.rs
expression: result.data.into_json().unwrap()
---
{
  "products": [
    {
      "cover": {
        "id": "4e2d05fa-d79c-401c-8cdf-275eb2dccbae"
      }
    }
  ]
}
