src/graphql_schema/snapshots/tyorka_admin__graphql_schema__queries__products__description.snap
---
source: src/graphql_schema/queries.rs
expression: result.data.into_json().unwrap()
---
{
  "product": {
    "descriptionHTML": {
      "en": "<p>This was ~~erased~~ <em>deleted</em>.</p>\n"
    },
    "descriptionText": {
      "en": "This was  deleted."
    }
  }
}
